# 1

./: PRD.md  README.md  pyproject.toml  run_server.py
src/life_assistant/: __init__.py  engine.py  models.py  server.py  service.py
src/life_assistant/static/: app.js  index.html  styles.css
tests/: test_server_static.py  test_service.py
