[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "life-assistant-mvp"
version = "0.1.0"
description = "MVP backend for a smart lifestyle recognition assistant"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
